# pong-sdl

./: .gitignore  CMakeLists.txt  README.md  build.py
include/: ball.h  game.h  paddle.h
src/: ball.cpp  game.cpp  main.cpp  paddle.cpp
